Change parameter type to string. Cannot tell if integer is supported.

--- a/metadata.yml
+++ b/metadata.yml
@@ -17,6 +17,6 @@ endpoints:
     parameters:
       - name: mID
         description: Metabolite ID.
-        type: integer
+        type: string
         required: true
         default: 4383
