--- a/metadata.yml
+++ b/metadata.yml
@@ -1,7 +1,7 @@
 ---
 
 name: pmr_demo_api
-version: 0.2
+version: 0.3
 type: query
 main_module: main.py
 url: http://metnetdb.org/PMR/
@@ -12,6 +12,7 @@ whitelist:
 
 requirements:
     - requests
+    - json
 
 endpoints:
   /search:
