--- a/services/experiments_api/metadata.yml
+++ b/services/experiments_api/metadata.yml
@@ -5,7 +5,7 @@ version: 0.4
 type: query
 main_module: services.experiments_api.main.py
 url: http://metnetdb.org/PMR/
-description: 'Experiment API to retrieve experiment data by id, list of available experiments
+description: 'Experiment API to retrieve experiment data by id, list of available experiments'
 icon: pmr_large.png
 whitelist:
   - pmr-webapi.gdcb.iastate.edu
